# wfslib

./: .gitignore  .travis.yml  AGENTS.md  CMakeLists.txt  CMakePresets.json  COMMIT_SUMMARY.md  Makefile  README.md  appveyor.yml  common.mk  vcpkg.json  wfs-entry-creation-plan.md  wfslib.sln
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: build.yml  clang-format.yml
include/wfslib/: Directory.h  File.h  FileDevice.h  KeyFile.h  Link.h  Wfs.h  blocks_device.h  device.h  directory.h  directory_items_iterator.h  entry.h  errors.h  file.h  file_device.h  key_file.h  link.h  recovery.h  wfs.h  wfs_device.h  wfs_item.h  wfslib.h
src/: Area.cpp  Area.h  Block.cpp  Block.h  DataBlock.cpp  DataBlock.h  DeviceEncryption.cpp  DeviceEncryption.h  Directory.cpp  File.cpp  FileDevice.cpp  KeyFile.cpp  MetadataBlock.cpp  Structs.cpp  SubBlockAllocator.h  WfsItem.cpp  area.cpp  area.h  block.cpp  block.h  blocks_cluster.h  blocks_device.cpp  data_block.cpp  data_block.h  device_encryption.cpp  device_encryption.h  directory.cpp  directory_entry_cache.cpp  directory_entry_cache.h  directory_items_iterator.cpp  directory_iterator.cpp  directory_iterator.h  directory_leaf_tree.cpp  directory_leaf_tree.h  directory_map.cpp  directory_map.h  directory_map_iterator.cpp  directory_map_iterator.h  directory_parent_tree.cpp  directory_parent_tree.h  (+71 more)
tests/: CMakeLists.txt  block_tests.cpp  directory_leaf_tree_tests.cpp  directory_map_tests.cpp  directory_tree_tests.cpp  entry_metadata_builder_tests.cpp  eptree_tests.cpp  file_layout_accessor_tests.cpp  file_layout_tests.cpp  file_resize_tests.cpp  file_tests.cpp  free_blocks_allocator_tests.cpp  free_blocks_tree_bucket_tests.cpp  free_blocks_tree_tests.cpp  ftree_tests.cpp  ftrees_tests.cpp  rtree_tests.cpp  sub_block_allocator_tests.cpp  test_area.cpp  test_area.h  test_block.cpp  test_block.h  test_blocks_device.cpp  test_blocks_device.h  test_device.h  test_free_blocks_allocator.cpp  test_free_blocks_allocator.h  test_metadata_block.cpp  test_metadata_block.h  test_utils.h  tree_nodes_allocator_tests.cpp  wfs_device_format_tests.cpp
tests/utils/: range_assertions.h  test_area.cpp  test_area.h  test_block.cpp  test_block.h  test_blocks_device.cpp  test_blocks_device.h  test_device.h  test_fixtures.h  test_free_blocks_allocator.cpp  test_free_blocks_allocator.h  test_utils.h
vcpkg_overlay/liblzma/: portfile.cmake
wfs-extract/: Makefile  main.cpp  wfs-extract.vcxproj
wfs-file-injector/: Makefile  main.cpp  packages.config  wfs-file-injector.vcxproj
wfs-fuse/: Makefile  wfs-fuse.cpp
wfsdump/: Makefile  main.cpp  packages.config  wfsdump.vcxproj
wfslib/: Area.cpp  Area.h  Block.cpp  Block.h  DataBlock.cpp  DataBlock.h  Device.h  DeviceEncryption.cpp  DeviceEncryption.h  Directory.cpp  Directory.h  File.cpp  File.h  FileDevice.cpp  FileDevice.h  KeyFile.cpp  KeyFile.h  Link.cpp  Link.h  Makefile  MetadataBlock.cpp  MetadataBlock.h  Structs.cpp  Structs.h  SubBlockAllocator.cpp  SubBlockAllocator.h  Wfs.cpp  Wfs.h  WfsItem.cpp  WfsItem.h  WfsLib.h  packages.config  wfslib.vcxproj  wfslib.vcxproj.filters
